--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* Mehmet Kahya */
+/* Jphabs Khalifa */
 /* Created: 17 March 2024 */
-/* Last Updated: 15 January 2025 */
+/* Last Updated: 19 February 2025 */
 
 :root {
   --primary-color: #3B82F6;
